tests/parser/errors/unexpected_token.err
error[P999]: tests/parser/errors/unexpected_token.mochi:1:13: unexpected token "*" (expected PostfixExpr)
  --> tests/parser/errors/unexpected_token.mochi:1:13

  1 | let x = 1 + * 2
    |             ^

help:
  Parse error occurred. Check syntax near this location.